updated license to MIT

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "version-bump": "./scripts/versioning/iterate -q"
   },
   "author": "",
-  "license": "GPL-3.0",
+  "license": "MIT",
   "dependencies": {
     "body-parser": "^1.18.2",
     "compression": "^1.7.1",
